2.4-2
	Clarified the license specification.

2.4-1
	Latentnet now prints a warning when computing BICs for random
	effects models, since we do not have a theoretical justification
	for that.

	A bug reported by Jorge González in the multithreaded code has
	been fixed.

2.4-0
	Removed the dependence on package 'mclust'. (The functionality
	used has been reimplemented internally.) This means that
	commercial use of the latent position clustering functionality
	is now possible without the UW license. The reimplementation
	requires 'mvtnorm' as a dependency.

	Fixed a number of bugs reported by Soriani Nicola.

	Modified the proposal tuner to propose those variables with high
	autocorrelation more aggressively (at the expense of the
	others). This should vastly improve mixing for complex models.

	Package 'coda' is now a dependency rather than a suggested package.

	Made the require()s for the suggested packages more informative.

2.3-0
	Added an ability to fit bilinear latent space models of
	Hoff (2005).

	Bug fixes, including one reported by Soriani Nicola.

	Documentation fixes.

2.2-3
	Fixed a bug in handling of missing data, uncovered by Xiaoyue
	"Maggie" Niu, and added a test for it.

	Documentation fixes.

2.2-2
	More documentation fixes.

2.2-1
	Documentation fixes.

2.2-0
	Ability to fit random effects (actor heterogeneity) models.

	Removed ergmm.par class --- it has been rendered obsolete by
	changes in R's handling of partial matching in [[ operator.

	Many bug fixes and miscellaneous changes.