@@ -1,6 +1,9 @@
 2.4-2
 	Clarified the license specification.
 
+	Latentnet now prints a warning when a matrix is passed on the LHS
+	of the model formula instead of a network.
+
 2.4-1
 	Latentnet now prints a warning when computing BICs for random
 	effects models, since we do not have a theoretical justification
